<resources>
    <string name="app_name" translatable="false">RadioManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter">Entrance</string>
    <string name="reg">Registration</string>
    <string name="country">Countries</string>
    <string name="lang">Languages</string>
    <string name="tag">Tags</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_text">All listening history will be cleared. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_correct_internet">This type of Internet connection is prohibited by the user</string>
    <string name="no_internet">The Internet is not available</string>
    <string name="schedule_playback">Schedule playback</string>
    <string name="delete_record">Delete Record</string>
    <string name="cancel">Cancel</string>
    <string name="no_history">History is empty</string>
    <string name="remove_favorite">Remove from favorite</string>
    <string name="no_browser">Browser not found</string>
    <string name="err_browser">Error opening browser</string>
    <string name="no_stations">There are no other radio stations nearby</string>
    <string name="no_last">No information about the past station</string>
    <string name="sign_out">Sign out</string>
    <string name="sing_out_text">Are you sure you want to log out of your profile?</string>
    <string name="photo_permission">Permission is required to select a photo</string>
    <string name="err_photo">Error in image processing</string>
    <string name="hello">Welcome,</string>
    <string name="loading">Loading data…</string>
    <string name="storing">Storing data…</string>
    <string name="stored">Data stored</string>
    <string name="err_update">Update error</string>
    <string name="err_loading">Loading error</string>
    <string name="sending">Sending data…</string>
    <string name="sent">Data sent</string>
    <string name="err_send">Submission error</string>
    <string name="avatar_saved">Avatar saved successfully</string>
    <string name="err_avatar">Avatar saving error:</string>
    <string name="alarm">Alarm set</string>
    <string name="alarm_time">Will go off at</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="stations">Stations</string>
    <string name="tracks">Tracks</string>
    <string name="filters">Filters</string>
    <string name="filter_count">stations found</string>
    <string name="reset">Reset</string>
    <string name="sort">Sort</string>
    <string name="alphabet">Alphabet</string>
    <string name="rating">Rating</string>
    <string name="bitrate">Bitrate</string>
    <string name="repeat_pass">Repeat the password</string>
    <string name="connection">Connection</string>
    <string name="network_sett">Network Settings</string>
    <string name="wifi">Wi-fi only</string>
    <string name="any">Any</string>
    <string name="mobile">Mobile network only</string>
    <string name="timer_seconds">Use seconds</string>
    <string name="circle">Circle</string>
    <string name="rhombus">Rhombus</string>
    <string name="divider">Divider type</string>
    <string name="swipe">Swipe</string>
    <string name="buttons">Buttons</string>
    <string name="and">and</string>
    <string name="appearance">Appearance</string>
    <string name="nav_type">Navigation type</string>
    <string name="balance">Balance</string>
    <string name="audio">Audio</string>
    <string name="agc" translatable="false">AGC</string>
    <string name="crossfade" translatable="false">Crossfade</string>
    <string name="vote_correct">Successfully voted for the station</string>
    <string name="vote_err">You are voting for the same station too often</string>
    <string name="find_in_browser">Find in browser</string>
    <string name="error_log_pass">Enter your username and password</string>
    <string name="err_log">Enter your username</string>
    <string name="err_pass">Enter your password</string>
    <string name="err_pass_not_same">Passwords don\'t match</string>
    <string name="err_bad_data">Incorrect username or password entered</string>
    <string name="err_inet">Check your internet connection</string>
    <string name="err_exist">The user already exists</string>
</resources>